# heat-2D

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci-tests.yml
benchmarks/: CMakeLists.txt  benchmark.cpp
examples/: .gitignore  CMakeLists.txt  example-colliding-pulses.cpp  example-moving-source.cpp  example-thermal-mirage.cpp
heat2D/: CMakeLists.txt  heatPDE.cpp  heatPDE.hpp
heat2D/BoundaryCondition/: BoundaryCondition.hpp  BoundaryCondition.test.cpp  CMakeLists.txt  DirichletBoundaryCondition.hpp  NeumannBoundaryCondition.cpp  NeumannBoundaryCondition.hpp
heat2D/HeatPDE2D/: CMakeLists.txt  HeatPDE2D.cpp  HeatPDE2D.hpp  HeatPDE2D.test.cpp
heat2D/Mesh2D/: CMakeLists.txt  Mesh2D.cpp  Mesh2D.hpp  Mesh2D.test.cpp  StructuredMesh2D.cpp  StructuredMesh2D.hpp
heat2D/SolutionWriter/: SolutionWriter.hpp
heat2D/SpatialDiscretization2D/: CMakeLists.txt  FiniteDifference2D.cpp  FiniteDifference2D.hpp  SpatialDiscretization2D.hpp  SpatialDiscretization2D.test.cpp
heat2D/TimeIntegrator/: CMakeLists.txt  CrankNicolson.hpp  ExplicitEuler.hpp  ImplicitEuler.hpp  TimeIntegrator.hpp
tests/: CMakeLists.txt
